# dbook

./: .gitattributes  .gitignore  CONTRIBUTING.md  DEDICATORIA.md  README.md  pyproject.toml
biblioteca/: METRICAS.md  PROCEDENCIA.md
biblioteca/_fontes/: os_lusiadas.txt  os_lusiadas_obra.txt
biblioteca/biblia_en_kjv.dbook/: manifest.json
biblioteca/biblia_la_vulgata.dbook/: manifest.json
biblioteca/biblia_pt_livre.dbook/: manifest.json  structure.jsonl
biblioteca/frankenstein.dbook/: manifest.json  structure.jsonl
biblioteca/os_lusiadas.dbook/: manifest.json  structure.jsonl
dbook/: LICENSE  NOTICE  README.md  __init__.py  __main__.py  cli.py  embedders.py  extract.py  format.py
dbook/integrations/: __init__.py  langchain.py  llama_index.py
docs/: constituicao.md  dbook_format.md  manifesto.md  spec_dbook_v1.md
examples/: quickstart.py
prova_de_origem/: SHA256SUMS  SHA256SUMS.ots  prova_de_origem.md
prova_de_origem/selo_1_inicial/: SHA256SUMS  SHA256SUMS.ots
prova_de_origem/selo_2_canonico/: SHA256SUMS.ots
