[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dbook"
version = "1.0.0"
description = "Livro Descodificado — formato universal e ferramenta de referência para descodificar livros uma vez e partilhar para sempre"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Gustavo de Urzêda Abreu", email = "Gustavo-Ur@users.noreply.github.com" }]
keywords = ["dbook", "rag", "embeddings", "ai", "knowledge-commons", "decoded-book"]
dependencies = [
    "numpy>=1.21",
    "requests>=2.25",
    "pypdf>=3.0",
]

[project.optional-dependencies]
# Extração de PDFs só-imagem (scans) por OCR offline.
ocr = ["pymupdf>=1.23", "rapidocr-onnxruntime>=1.3"]
# Loaders .dbook para frameworks de RAG (qualquer app passa a ler o formato).
langchain = ["langchain-core>=0.2"]
llama-index = ["llama-index-core>=0.10"]

[project.scripts]
dbook = "dbook.cli:main"

[project.urls]
Homepage = "https://github.com/Gustavo-Ur/dbook"

[tool.setuptools]
packages = ["dbook", "dbook.integrations"]
